--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
   </head>
 
@@ -12,9 +13,9 @@
 
         <nav>
             <ul>
-                <li><a href="">Студія</a></li>
-                <li><a href="">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
+                <li><a href="#">Студія</a></li>
+                <li><a href="#">Портфоліо</a></li>
+                <li><a href="#">Контакти</a></li>
             </ul>
         </nav>
 
@@ -34,19 +35,19 @@
 
         </section>
 
-        <section>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+        <ul>
+            <li><h3>УВАГА ДО ДЕТАЛЕЙ</h3></li>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
 
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <li><h3>ПУНКТУАЛЬНІСТЬ</h3></li>
             <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.<p>
 
-            <h3>ПЛАНУВАННЯ</h3>
+            <li><h3>ПЛАНУВАННЯ</h3></li>
             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
 
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <li><h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3></li>
             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-        </section>
+            </ul>
 
         <section>
             <h2>Чим ми займаємося</h2>
@@ -61,29 +62,29 @@
             <h2>Наша команда</h2>
 
             <ul>
-                <li><a href="" >
+                <li>
                     <img src="images/man-in-glasses-with-notebook.jpg" width="270" height="260" alt="Чоловік з бородою в окулярах посміхається">
                     <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
-                </a></li>
+                </li>
 
-                <li><a href="" >
+                <li>
                     <img src="images/woman-in-glasses.jpg" width="270" height="260" alt="Жінка в окулярах посміхається">
                     <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
-                </a></li>
+                </li>
 
-                <li><a href="" >
+                <li>
                     <img src="images/man-smile.jpg" width="270" height="260" alt="Чоловік посміхається">
                     <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
-                </a></li>
+                </li>
 
-                <li><a href="" >
+                <li>
                     <img src="images/man-in-glasses.jpg" width="270" height="260" alt="Чоловік в окулярах">
                     <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
-                </a></li>
+                </li>
             </ul>
 
         </section>
